--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -8,6 +8,15 @@
             "versionName": "Winter '19"
         }
     ],
+  "packageDirectories": [
+        {
+            "path": "Symphony",
+            "default": false,
+            "package": "dreamhouse",
+            "versionNumber": "3.0.0.NEXT",
+            "versionName": "Winter '19"
+        }
+    ],
     "namespace": "",
     "sfdcLoginUrl": "https://login.salesforce.com",
     "sourceApiVersion": "45.0",
