--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<Package xmlns="http://soap.sforce.com/2006/04/metadata">
+<?xml version="1.0" encoding="UTF-8"?><Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <version>49.0</version>
     <types>
         <members>A0</members>
@@ -40,11 +39,11 @@
         <name>Flow</name>
     </types>
     <types>
-        <members>ABCJson</members>
-        <name>StaticResource</name>
+        <members>Admin</members>
+        <name>Profile</name>
     </types>
     <types>
-        <members>SetupTest</members>
-        <name>Territory2</name>
+        <members>ABCJson</members>
+        <name>StaticResource</name>
     </types>
 </Package>
